--- a/index.html
+++ b/index.html
@@ -5,4 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Rock Paper Scissors</title> 
   </head>
+  <body>
+    <script></script>
+  </body>
 </html>
