Create two divs to display the scores on the page
The divs will update and display the score of the
player and computer score for each round.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
+    <div id="updated-player-score"></div>
+    <div id="updated-computer-score"></div>
     <div id="results"></div>
   </body>
 </html>
