--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <div id="updated-player-score"></div>
     <div id="updated-computer-score"></div>
     <div id="results"></div>
+    <div id="outcome"></div>
   </body>
 </html>
